# meetjsapril

meetjs/: index.html  package-lock.json  package.json
meetjs/src/: App.tsx
rope_pull/: pyproject.toml
rope_pull/rope-pull/: package-lock.json  package.json
rope_pull/rope-pull/src/: App.tsx  Control.tsx
rope_pull/rope_pull/: db.sqlite3  manage.py
rope_pull/rope_pull/rope_pull/: asgi.py  settings.py  urls.py  wsgi.py
rope_pull/rope_pull/ws/: consumers.py
server/: index.mjs  package-lock.json  package.json
