[tool.poetry]
name = "rope-pull"
version = "0.1.0"
description = ""
authors = ["Mateusz Pydych <mpydych@o2.pl>"]
readme = "README.md"
packages = [{include = "rope_pull"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
